# pissoff

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
crates/pissoff-hal/: Cargo.toml
crates/pissoff-hal/src/: delay.rs  gpio.rs  lib.rs
crates/pissoff-rp2040/: Cargo.toml  build.rs
crates/pissoff-rp2040/src/: board.rs  delay.rs  gpio.rs  lib.rs
docs/picow/: pico_w_tech_details.md
firmware/: Cargo.toml  build.rs
firmware/src/: main.rs
plans/: phase1.md
