[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
pissoff-hal = { path = "../crates/pissoff-hal" }
pissoff-rp2040 = { path = "../crates/pissoff-rp2040" }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }
